lds change title

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ inspired by handouts of Edward R. Tufte^^1^^. We created it to use for documents
    <div class="wallapatta ">
     <h1 class="title ">
      <a href="lds.html">
-      LargeDS is a set of JS Typed Arrays based Data Strcutures for memory intesive tasks
+      LargeDS: Typed Arrays based Data Strcutures for memory intesive tasks
      </a>
     </h1>
     <h3 class="date ">
