--- a/lds.html
+++ b/lds.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   </meta>
   <title>
-   LargeDS is a set of JS Typed Arrays based Data Strcutures for memory intesive tasks
+   LargeDS: Typed Arrays based Data Strcutures for memory intesive tasks
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </meta>
@@ -44,7 +44,7 @@
    </div>
    <div class="wallapatta ">
     <h1 class="title ">
-     LargeDS is a set of JS Typed Arrays based Data Strcutures for memory intesive tasks
+     LargeDS: Typed Arrays based Data Strcutures for memory intesive tasks
     </h1>
     <h3 class="date ">
      July 07, 2015
