Update with a link to past posts on blogger

--- a/old.html
+++ b/old.html
@@ -2,7 +2,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   Chethiya's blog
+   See past posts...
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -10,7 +10,6 @@
   <link href="lib/skeleton/css/skeleton.css" rel="stylesheet"/>
   <link href="lib/highlightjs/styles/default.css" rel="stylesheet"/>
   <link href="css/style.css" rel="stylesheet"/>
-  <link href="css/paginate.css" rel="stylesheet"/>
   <link href="blog.css" rel="stylesheet"/>
   <script>
    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -37,33 +36,32 @@
    </div>
    <div class="wallapatta">
     <h1 class="title">
-     <a href="lds.html">
-      LargeDS: Typed Arrays based Data Structures for memory intensive tasks
-     </a>
-    </h1>
-    <h3 class="date">
-     July 07, 2015
-    </h3>
-   </div>
-   <div class="wallapatta">
-    <h1 class="title">
-     <a href="wallapatta.html">
-      Git based blogging powered by Wallapatta
-     </a>
+     See past posts...
     </h1>
     <h3 class="date">
      May 22, 2015
     </h3>
-   </div>
-   <div class="wallapatta">
-    <h1 class="title">
-     <a href="old.html">
-      See past posts...
-     </a>
-    </h1>
-    <h3 class="date">
-     May 22, 2015
-    </h3>
+    <div class="row">
+     <div class="wallapatta-main nine columns">
+      <div id="wallapatta_0" class="article"><div id="wallapatta_1" class="html"><script>
+ window.location.replace("http://chethiya3000.blogspot.com")
+</script>
+</div><div id="wallapatta_2" class="section"><h3 class="heading"><span id="wallapatta_3" class="block"><span id="wallapatta_6" class="text">Redirecting...</span></span></h3><div class="content"><div id="wallapatta_4" class="section"><div class="content"><p id="wallapatta_5" class="paragraph"><span id="wallapatta_7" class="text">If not auto loading please </span><a id="wallapatta_8" class="link" href="http://chethiya3000.blogspot.com">click here</a><span id="wallapatta_9" class="text"> to visit older posts on blogger.</span></p></div></div></div></div></div>
+     </div>
+     <div class="wallapatta-sidebar three columns">
+      
+     </div>
+     <div style="display:none;">
+      <div class='wallapatta-code'><<<
+ <script>
+  window.location.replace("http://chethiya3000.blogspot.com")
+ </script>
+
+### Redirecting...
+
+ If not auto loading please <<http://chethiya3000.blogspot.com(click here)>> to visit older posts on blogger.</div>
+     </div>
+    </div>
    </div>
   </div>
   <script src="lib/highlightjs/highlight.pack.js">
