--- a/page2.html
+++ b/page2.html
@@ -37,16 +37,6 @@
    </div>
    <div class="wallapatta">
     <h1 class="title">
-     <a href="lds.html">
-      LargeDS: Typed Arrays based Data Structures for memory intensive tasks
-     </a>
-    </h1>
-    <h3 class="date">
-     July 07, 2015
-    </h3>
-   </div>
-   <div class="wallapatta">
-    <h1 class="title">
      <a href="wallapatta.html">
       Git based blogging powered by Wallapatta
      </a>
@@ -55,15 +45,10 @@
      May 22, 2015
     </h3>
    </div>
-   <div class="wallapatta">
-    <h1 class="title">
-     <a href="old.html">
-      See past posts...
-     </a>
-    </h1>
-    <h3 class="date">
-     May 22, 2015
-    </h3>
+   <div class="paginate">
+    <a class="prev-page button" href="page1.html">
+     prev
+    </a>
    </div>
   </div>
   <script src="lib/highlightjs/highlight.pack.js">
