--- a/page1.html
+++ b/page1.html
@@ -55,6 +55,16 @@
      May 22, 2015
     </h3>
    </div>
+   <div class="wallapatta">
+    <h1 class="title">
+     <a href="old.html">
+      See past posts...
+     </a>
+    </h1>
+    <h3 class="date">
+     May 22, 2015
+    </h3>
+   </div>
   </div>
   <script src="lib/highlightjs/highlight.pack.js">
   </script>
